// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VehicleComponent should create 1`] = `
<vtm-vehicle
  testRecord={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Vehicle identification number (VIN) 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-vin"
      >
         - 
      </dd>
    </div>
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Vehicle registration mark (VRM) 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-vrm"
      >
         - 
      </dd>
    </div>
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Country of registration 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-countryOfRegistration"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         EU vehicle category 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-euVehicleCategory"
      >
         - 
      </dd>
    </div>
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Odometer reading 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-odometerReading"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key border--bottom-none"
      >
         Preparer 
      </dt>
      <dd
        class="govuk-summary-list__value border--bottom-none"
        id="test-preparer"
      >
         - 
      </dd>
    </div>
  </dl>
</vtm-vehicle>
`;

exports[`VehicleComponent should render edit template if editState is EDIT 1`] = `
<vtm-vehicle
  editState={[Function Number]}
  testRecord={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Vehicle identification number (VIN) 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-vin"
      >
         - 
      </dd>
    </div>
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Vehicle registration mark (VRM) 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-vrm"
      >
         - 
      </dd>
    </div>
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Country of registration 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-countryOfRegistration"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         EU vehicle category 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-euVehicleCategory"
      >
         - 
      </dd>
    </div>
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Odometer reading 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-odometerReading"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key border--bottom-none"
      >
         Preparer 
      </dt>
      <dd
        class="govuk-summary-list__value border--bottom-none"
        id="test-preparer"
      >
         - 
      </dd>
    </div>
  </dl>
</vtm-vehicle>
`;

exports[`VehicleComponent should render view template if editState is VIEW_ONLY 1`] = `
<vtm-vehicle
  editState="0"
  testRecord={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Vehicle identification number (VIN) 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-vin"
      >
         - 
      </dd>
    </div>
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Vehicle registration mark (VRM) 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-vrm"
      >
         - 
      </dd>
    </div>
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Country of registration 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-countryOfRegistration"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         EU vehicle category 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-euVehicleCategory"
      >
         - 
      </dd>
    </div>
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Odometer reading 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-odometerReading"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key border--bottom-none"
      >
         Preparer 
      </dt>
      <dd
        class="govuk-summary-list__value border--bottom-none"
        id="test-preparer"
      >
         - 
      </dd>
    </div>
  </dl>
</vtm-vehicle>
`;
